--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
         config {
             keyAlias 'musicappkey'
             keyPassword 'western2019'
-            storeFile file('/Users/meganhasegawa/keys.jks')
+            storeFile file('keys.jks')
             storePassword 'western2019'
         }
     }
