--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
         </activity>
         <activity android:name=".GuestActivity">
         </activity>
+        <activity android:name=".HostActivity">
+        </activity>
     </application>
 
 </manifest>
