--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
     buildToolsVersion "24.0.2"
     defaultConfig {
         applicationId "western.musicapp"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -34,6 +34,7 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:9.4.0'
     compile 'com.google.firebase:firebase-database:9.4.0'
     compile 'com.google.android.gms:play-services-auth:9.4.0'
+    compile 'com.firebaseui:firebase-ui:0.5.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
