--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,10 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
@@ -34,6 +38,7 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:9.4.0'
     compile 'com.google.firebase:firebase-database:9.4.0'
     compile 'com.google.android.gms:play-services-auth:9.4.0'
+    compile 'com.google.apis:google-api-services-youtube:v3-rev178-1.22.0'
     compile files('libs/YouTubeAndroidPlayerApi.jar')
 }
 
