--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".MainActivity">
+        <activity android:name=".StartupActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,7 +17,7 @@
         </activity>
         <activity android:name=".GuestActivity"></activity>
         <activity android:name=".HostActivity"></activity>
-        <activity android:name=".StartupActivity"></activity>
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
